# xTrainer

./: .gitignore  BasicCLI.cpp  BasicCLI.h  CLI.h  CMakeLists.txt  GameMem.cpp  GameMem.h  GameRegisters.cpp  GameRegisters.h  LICENSE.txt  Memory.cpp  Memory.h  Player.cpp  Player.h  RAMPage.cpp  RAMPage.h  README.md  RegisterPage.cpp  RegisterPage.h  main.cpp  tools-imp.h  tools.cpp  tools.h  trainer.cpp  trainer.h  xTrainer.h
cli/: BasicCLI.cpp  BasicCLI.h  CLI.h  main.cpp
core/: ABI.h  FThread.cpp  FThread.h  Process.h  X86ThreadContext.h  core.h  proc.h  thread.h
gui/: PlayerInfoPanel.h  main.cpp
include/xtrainer/tools/: csv.h  log.h  tools-imp.h
include/xtrainer/trainer/: trainer.h
linux/: imp.h
platform/linux/: LinuxABI.h  LinuxProcess.cpp  LinuxProcess.h  LinuxThread.cpp  LinuxThread.h
samples/: CMakeLists.txt
samples/notepadtrainer/: CMakeLists.txt  main.cpp
structs/: Dolphin.h  Player.cpp  Player.h  RAMPage.cpp  RAMPage.h  RegisterPage.cpp  RegisterPage.h  Stage.cpp  Stage.h
test/: CMakeLists.txt  main.cpp  test.cpp
tools/: Memory.cpp  Memory.h  csv.cpp  csv.h  log.cpp  log.h  tools-imp.h  tools.cpp  tools.h  trainer.cpp  trainer.h
trainer/: Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  Module.cpp  Module.h  control.cpp  control.h  hook.cpp  hook.h  trainer.cpp  trainer.h
